added a new footer [issue 53]

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>y</title>
+  <title>WE FISHING</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
   <!-- <script src="./src/assets/libs/jquery/jquery.leoweather.min.js"></script> -->
   <!-- <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=f7ebdb37694874bb05abb8d95122663a
